; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_transaction.c_svn_fs_fs__delete_node_revision.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_transaction.c_svn_fs_fs__delete_node_revision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i64 }
%struct.TYPE_12__ = type { i64, i64, i64 }
%struct.TYPE_14__ = type { i8* }

@FALSE = common dso_local global i32 0, align 4
@svn_node_dir = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_fs__delete_node_revision(%struct.TYPE_11__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_12__*, align 8
  %8 = alloca %struct.TYPE_13__*, align 8
  %9 = alloca i8*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32* @svn_fs_fs__get_node_revision(%struct.TYPE_12__** %7, %struct.TYPE_11__* %10, i32* %11, i32* %12, i32* %13)
  %15 = call i32 @SVN_ERR(i32* %14)
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %35

20:                                               ; preds = %3
  %21 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = call i64 @is_txn_rep(i64 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %35

26:                                               ; preds = %20
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @svn_fs_fs__path_txn_node_props(%struct.TYPE_11__* %27, i32* %28, i32* %29)
  %31 = load i32, i32* @FALSE, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = call i32* @svn_io_remove_file2(i32 %30, i32 %31, i32* %32)
  %34 = call i32 @SVN_ERR(i32* %33)
  br label %35

35:                                               ; preds = %26, %20, %3
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %82

40:                                               ; preds = %35
  %41 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %42 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = call i64 @is_txn_rep(i64 %43)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %82

46:                                               ; preds = %40
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i64, i64* @svn_node_dir, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %82

52:                                               ; preds = %46
  %53 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %53, i32 0, i32 0
  %55 = load %struct.TYPE_13__*, %struct.TYPE_13__** %54, align 8
  store %struct.TYPE_13__* %55, %struct.TYPE_13__** %8, align 8
  %56 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %57 = load i32*, i32** %5, align 8
  %58 = load i32*, i32** %6, align 8
  %59 = call i32 @svn_fs_fs__path_txn_node_children(%struct.TYPE_11__* %56, i32* %57, i32* %58)
  %60 = load i32, i32* @FALSE, align 4
  %61 = load i32*, i32** %6, align 8
  %62 = call i32* @svn_io_remove_file2(i32 %59, i32 %60, i32* %61)
  %63 = call i32 @SVN_ERR(i32* %62)
  %64 = load %struct.TYPE_13__*, %struct.TYPE_13__** %8, align 8
  %65 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %81

68:                                               ; preds = %52
  %69 = load i32*, i32** %5, align 8
  %70 = load i32*, i32** %6, align 8
  %71 = call %struct.TYPE_14__* @svn_fs_fs__id_unparse(i32* %69, i32* %70)
  %72 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %71, i32 0, i32 0
  %73 = load i8*, i8** %72, align 8
  store i8* %73, i8** %9, align 8
  %74 = load %struct.TYPE_13__*, %struct.TYPE_13__** %8, align 8
  %75 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %74, i32 0, i32 0
  %76 = load i64, i64* %75, align 8
  %77 = load i8*, i8** %9, align 8
  %78 = load i32*, i32** %6, align 8
  %79 = call i32* @svn_cache__set(i64 %76, i8* %77, i32* null, i32* %78)
  %80 = call i32 @SVN_ERR(i32* %79)
  br label %81

81:                                               ; preds = %68, %52
  br label %82

82:                                               ; preds = %81, %46, %40, %35
  %83 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %84 = load i32*, i32** %5, align 8
  %85 = load i32*, i32** %6, align 8
  %86 = call i32 @svn_fs_fs__path_txn_node_rev(%struct.TYPE_11__* %83, i32* %84, i32* %85)
  %87 = load i32, i32* @FALSE, align 4
  %88 = load i32*, i32** %6, align 8
  %89 = call i32* @svn_io_remove_file2(i32 %86, i32 %87, i32* %88)
  ret i32* %89
}

declare dso_local i32 @SVN_ERR(i32*) #1

declare dso_local i32* @svn_fs_fs__get_node_revision(%struct.TYPE_12__**, %struct.TYPE_11__*, i32*, i32*, i32*) #1

declare dso_local i64 @is_txn_rep(i64) #1

declare dso_local i32* @svn_io_remove_file2(i32, i32, i32*) #1

declare dso_local i32 @svn_fs_fs__path_txn_node_props(%struct.TYPE_11__*, i32*, i32*) #1

declare dso_local i32 @svn_fs_fs__path_txn_node_children(%struct.TYPE_11__*, i32*, i32*) #1

declare dso_local %struct.TYPE_14__* @svn_fs_fs__id_unparse(i32*, i32*) #1

declare dso_local i32* @svn_cache__set(i64, i8*, i32*, i32*) #1

declare dso_local i32 @svn_fs_fs__path_txn_node_rev(%struct.TYPE_11__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
